# dynamiceventscheduler

./: pyproject.toml
apps/Auth/: admin.py  forms.py  messages.py  models.py  serializers.py  urls.py  views.py
apps/Auth/migrations/: 0001_initial.py
apps/Event/: admin.py  models.py  serializers.py  urls.py  views.py
apps/Event/migrations/: 0001_initial.py  0002_event_image_url.py  0003_alter_event_date.py
apps/Registration/: admin.py  models.py  serializers.py  urls.py  views.py
apps/Registration/migrations/: 0001_initial.py
config/: .env  settings.py  urls.py
utils/: email.py
